# Akki_Ai

./: README.md  pyproject.toml
output/: report.md
src/akki_ai/: crew.py  main.py
